--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -7,6 +7,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY api/ ./api/
 COPY api/model/ ./api/model/
+COPY models/ ./models/
 
 EXPOSE 8000
 
